<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/tittle_une"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/msg_une" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name_une"
                android:textColor="@color/colo1" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/last_une"
                android:textColor="@color/colo1" />

            <EditText
                android:id="@+id/editTextLast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_user"
                android:textColor="@color/colo1" />

            <EditText
                android:id="@+id/editTextU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_pass"
                android:textColor="@color/colo1" />

            <EditText
                android:id="@+id/editTextP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true"></EditText>

            <CheckBox
                android:id="@+id/checkReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_check"></CheckBox>

            <Button
                android:id="@+id/btnReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@color/colo1"
                android:onClick="register"
                android:text="@string/msg_btn_un"></Button>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/msg_cue"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:onClick="irLogin"
                    android:text="@string/label_session"
                    android:textColor="@color/colo1"></TextView>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</ScrollView>