<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CuentaActivity">


    <LinearLayout
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="30dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/lbl_top_registro_movimientos"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="20dp"
            android:background="#000000" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbIngresos"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:background="@color/browser_actions_bg_grey"
                android:buttonTint="@color/colo1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/rb_label_ingreso" />

            <RadioButton
                android:id="@+id/rbEgresos"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:background="@color/browser_actions_bg_grey"
                android:buttonTint="@color/colo1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/rb_label_egreso" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/lbl_top_register"
            android:textColor="@color/purple_500"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etFechaMov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="190dp"
            android:focusable="false"
            android:hint="@string/et_label_fecha"
            android:onClick="obtenerFecha"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/et_label_valor"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etValorMovimiento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:inputType="numberDecimal"
                android:textSize="15sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/cmbConceptosMovimientos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colo1" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colo1"
            android:onClick="guardarGasto"
            android:text="@string/btn_label_register_mov" />

    </LinearLayout>

</LinearLayout>