<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="120dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_rec"
            android:textColor="@color/black"
            android:textSize="25dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_user"
            android:layout_marginTop="10dp"
            android:textColor="@color/colo1"
            />
        <EditText
            android:id="@+id/editTextUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ></EditText>

        <Button
            android:id="@+id/btnRec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_rec"
            android:onClick="send"

            ></Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_session"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="80dp"
            android:textColor="@color/colo1"
            android:onClick="irLogin"
            >
        </TextView>
        
        
    </LinearLayout>

</LinearLayout>